--- a/app/src/main/res/layout/shopping_cart.xml
+++ b/app/src/main/res/layout/shopping_cart.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.shopping_cart.ShoppingCartFragment">
+    android:background="@color/app_background"
+    tools:context=".ui.view.shopping_cart.ShoppingCartFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
